Added the Landsat Catalog Builder

--- a/Thulir.Cli/Thulir.Cli.csproj
+++ b/Thulir.Cli/Thulir.Cli.csproj
@@ -8,4 +8,9 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Thulir.Core\Thulir.Core.csproj" />
+      <ProjectReference Include="..\Thulir.Landsat\Thulir.Landsat.csproj" />
+    </ItemGroup>
+
 </Project>
