Tried GDAL bindings - but having some issues. So moved the GDAL related operations to Python.

--- a/Thulir.Landsat/Thulir.Landsat.csproj
+++ b/Thulir.Landsat/Thulir.Landsat.csproj
@@ -8,5 +8,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Thulir.Aws\Thulir.Aws.csproj" />
+      <ProjectReference Include="..\Thulir.Gdal\Thulir.Gdal.csproj" />
     </ItemGroup>
 </Project>
