Get the OpenWeather AppKey from AWS

--- a/Thulir.Core/Thulir.Core.csproj
+++ b/Thulir.Core/Thulir.Core.csproj
@@ -7,8 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Services" />
       <Folder Include="Utils" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Thulir.Aws\Thulir.Aws.csproj" />
     </ItemGroup>
 
 </Project>
