--- a/Thulir.Weather/Thulir.Weather.csproj
+++ b/Thulir.Weather/Thulir.Weather.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Thulir.Core\Thulir.Core.csproj" />
+    </ItemGroup>
+
 </Project>
