--- a/Thulir.Core/Thulir.Core.csproj
+++ b/Thulir.Core/Thulir.Core.csproj
@@ -14,4 +14,9 @@
       <ProjectReference Include="..\Thulir.Aws\Thulir.Aws.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Elasticsearch.Net" Version="7.12.0" />
+      <PackageReference Include="NEST" Version="7.12.0" />
+    </ItemGroup>
+
 </Project>
