--- a/Thulir.Core/Thulir.Core.csproj
+++ b/Thulir.Core/Thulir.Core.csproj
@@ -15,8 +15,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.0.123" />
       <PackageReference Include="Elasticsearch.Net" Version="7.12.0" />
       <PackageReference Include="NEST" Version="7.12.0" />
+      <PackageReference Include="Npgsql" Version="6.0.2" />
     </ItemGroup>
 
 </Project>
