--- a/Thulir.Core/Thulir.Core.csproj
+++ b/Thulir.Core/Thulir.Core.csproj
@@ -19,6 +19,7 @@
       <PackageReference Include="Elasticsearch.Net" Version="7.12.0" />
       <PackageReference Include="NEST" Version="7.12.0" />
       <PackageReference Include="Npgsql" Version="6.0.2" />
+      <PackageReference Include="Npgsql.Json.NET" Version="6.0.2" />
     </ItemGroup>
 
 </Project>
