Added the ability to test from local Android app

--- a/Thulir.ReactUI/Properties/launchSettings.json
+++ b/Thulir.ReactUI/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "Thulir.ReactUI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7021;http://localhost:5008",
+      "applicationUrl": "http://localhost:7021;http://localhost:5008",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
