Upgrade packages and sort out issues

--- a/Thulir.ReactUI/appsettings.Development.json
+++ b/Thulir.ReactUI/appsettings.Development.json
@@ -2,8 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.AspNetCore.SpaProxy": "Information",
+      "Microsoft": "Information",
+      "Microsoft.AspNetCore.SpaProxy": "Debug",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
