--- a/Thulir.ReactUI/Thulir.ReactUI.csproj
+++ b/Thulir.ReactUI/Thulir.ReactUI.csproj
@@ -29,6 +29,8 @@
   
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.20" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="7.0.0" />
   </ItemGroup>
 
